# search-scrape

./: .gitignore  README.md  docker-compose.yml
docs/: DEVELOPMENT.md
mcp-server/: Cargo.toml  Dockerfile
mcp-server/src/: lib.rs  main.rs  mcp.rs  rust_scraper.rs  scrape.rs  search.rs  stdio_service.rs  types.rs
searxng/: settings.yml
